# submodel-sdk-python

./: .coverage  .gitignore  CHANGELOG.md  README.md  SECURITY.md  TESTING.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
examples/: async_usage.py  basic_usage.py  cli_usage.md  serverless_usage.py
submodel/: __init__.py
submodel-env/: pyvenv.cfg
submodel-env/Scripts/: activate  activate.bat
submodel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
submodel/cli/: __init__.py  cli.py
submodel/sdk/: __init__.py  async_client.py  auth.py  client.py  device.py  endpoint.py  exceptions.py  instance.py  job.py  serverless.py  utils.py
tests/: test_async_client.py  test_auth.py  test_cli.py  test_device.py  test_endpoint.py  test_instance.py  test_job.py  test_retry.py  test_serverless.py
